# hfst-ospell-py

./: CMakeLists.txt  swig-example.cpp  swig-example.h
swig/: swig-example.i
swig/python/: iuzbek+.hfst:Zone.Identifier  test.py  uzbek+.hfst:Zone.Identifier
